表关系的构建
