# docs/swagger.json
@@ -1,8 +1,22 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "笔记的后台api",
+        "title": "接口文档",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "这里写联系人信息",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8888",
+    "basePath": "/",
     "paths": {
         "/login": {
             "post": {
@@ -37,7 +51,7 @@
         "/ping": {
             "get": {
                 "tags": [
-                    "心跳"
+                    "A心跳"
                 ],
                 "summary": "测试联通",
                 "responses": {
@@ -52,17 +66,25 @@
         },
         "/sendCode": {
             "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "接口实现"
                 ],
-                "summary": "发送验证码",
+                "summary": "发送验证码21312",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "email",
                         "name": "email",
-                        "in": "formData",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
